[gd_scene load_steps=5 format=3 uid="uid://cfm6a3jfm0ldh"]

[ext_resource type="Script" uid="uid://dbe8vkmhm2k2h" path="res://scripts/map/world.gd" id="1_7g83o"]
[ext_resource type="Script" uid="uid://cfby38u0dm0nm" path="res://scripts/map/map_generator.gd" id="2_d1c63"]
[ext_resource type="Script" uid="uid://c7ifmuhpidehc" path="res://scripts/map/map_builder.gd" id="3_1lgw5"]
[ext_resource type="Script" uid="uid://ca2ko5lhhcay3" path="res://scripts/map/enemy_spawner.gd" id="4_d1c63"]

[node name="World" type="Node2D"]
script = ExtResource("1_7g83o")
_seed = null

[node name="MapGenerator" type="Node2D" parent="."]
script = ExtResource("2_d1c63")

[node name="MapBuilder" type="Node2D" parent="."]
script = ExtResource("3_1lgw5")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("4_d1c63")
